--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,7 +5,7 @@
       <h2>User info</h2>
       <%= render partial: 'info', locals: { user: @user } %>
       <h2 class="mt-3">New book</h2>
-      <%= render 'form', book: @new_book %>
+      <%= render partial: 'form', locals: { book: @new_book } %>
     </div>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
@@ -28,8 +28,9 @@
           <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
         </tr>
-      </table
+      </table>
       <%= render partial: "book_comments/form" , local: { book_comment: @book_comment } %>
+      
     </div>
   </div>
 </div>
